compiler/tests/compiler/must_fail/t_03.rs.exp.err
tests/compiler/must_fail/t_03.rs:8:5: 8:6 error: parse error
    var! {
    ^^
